@@ -130,8 +130,8 @@ G_BEGIN_DECLS
 #define NA_IPREFS_IO_PROVIDER_READABLE				"readable"
 #define NA_IPREFS_IO_PROVIDER_WRITABLE				"writable"
 
-#define NA_IPREFS_DEFAULT_EXPORT_FORMAT				"Desktop1"
-#define NA_IPREFS_DEFAULT_IMPORT_MODE				"NoImport"
+#define NA_IPREFS_DEFAULT_EXPORT_FORMAT				"Ask"
+#define NA_IPREFS_DEFAULT_IMPORT_MODE				"Ask"
 #define NA_IPREFS_DEFAULT_LIST_ORDER_MODE			"AscendingOrder"
 
 /* pre-registration of a callback
